--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Bazzy Shop</title>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
